# mediaserver

./: README.md  pyproject.toml
config/: clients.yaml  playback_profiles.yaml  streams.yaml
controller/: app.py  config_loader.py  repository.py  state.py
controller/adapters/: antmedia.py  base.py  nimble.py  wowza.py
controller/api/: routes.py
controller/core/: models.py  policy.py  signer.py
controller/workers/: reconciler.py
deploy/: Dockerfile  docker-compose.yaml  prometheus.yaml
deploy/grafana/: dashboard.json
docs/: README.md  obs-guide.md  openapi.md  player-notes.md  runbook.md
tests/: test_policy.py  test_signer.py
tools/: mctl.py
