[tool.poetry]
name = "mediaserver-controller"
version = "0.1.0"
description = "Media distribution controller for Nimble and other streaming servers"
authors = ["Media Ops <media@example.com>"]
packages = [
    { include = "controller" },
    { include = "tools" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { version = "^0.27.1", extras = ["standard"] }
httpx = "^0.27.0"
pyyaml = "^6.0.1"
pydantic = "^2.6.3"
typer = "^0.9.0"
python-multipart = "^0.0.9"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
